Trying to fix header and paragraph misalignment in container class

--- a/public/styling/style.css
+++ b/public/styling/style.css
@@ -82,7 +82,7 @@ body > div {
 }
 
 .container h2{
-  margin = 0;
+  margin: 0;
 }
 
 #main-header {
